--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -1,16 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "baseUrl": ".",
     "paths": {
-      "~": [
-        "src/components"
-      ]
+      "~": ["src/components"]
     },
     "plugins": [
       {
@@ -18,12 +12,6 @@
       }
     ]
   },
-  "include": [
-    "src",
-    "next.config.js",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src", "next.config.js", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
